# ifdata-bcb

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: getting-started.md
docs/advanced/: extending.md  sql-queries.md
docs/internals/: README.md  architecture.md  core.md  domain.md  infra.md  providers.md  services.md  utils.md
docs/providers/: cadastro.md  cosif.md  ifdata.md
notebooks/: quickstart.ipynb
scripts/: smoke_httpx.py
src/ifdata_bcb/: __init__.py
src/ifdata_bcb/core/: __init__.py  api.py  base_explorer.py  constants.py  entity_lookup.py  eras.py
src/ifdata_bcb/core/entity/: __init__.py  lookup.py  search.py
src/ifdata_bcb/domain/: __init__.py  exceptions.py  explorers.py  models.py  types.py  validation.py
src/ifdata_bcb/infra/: __init__.py  cache.py  config.py  log.py  paths.py  query.py  resilience.py  sql.py  storage.py
src/ifdata_bcb/providers/: __init__.py  base_collector.py  base_explorer.py  collector_models.py  enrichment.py
src/ifdata_bcb/providers/cadastro/: __init__.py  explorer.py
src/ifdata_bcb/providers/cosif/: __init__.py  collector.py  explorer.py
src/ifdata_bcb/providers/ifdata/: __init__.py  cadastro_explorer.py  collector.py  explorer.py  scope.py  temporal.py  valores_explorer.py
src/ifdata_bcb/providers/ifdata/cadastro/: __init__.py  collector.py  explorer.py  search.py
src/ifdata_bcb/providers/ifdata/valores/: __init__.py  collector.py  explorer.py  temporal.py
src/ifdata_bcb/services/: __init__.py  base_collector.py  entity_resolver.py  entity_searcher.py
src/ifdata_bcb/ui/: __init__.py  display.py
src/ifdata_bcb/utils/: __init__.py  cnpj.py  date.py  date_utils.py  fuzzy.py  fuzzy_matcher.py  nulls.py  period.py  text.py  text_utils.py
tests/: conftest.py  test_base_collector.py  test_cache.py  test_cnpj.py  test_logging.py  test_period.py  test_provider_contracts.py  test_text.py
tests/contract/: test_bcb_endpoints.py
tests/integration/: conftest.py  test_base_collector.py  test_base_explorer.py  test_bulk_read.py  test_cadastro.py  test_cadastro_filters.py  test_cosif.py  test_entity_lookup.py  test_entity_package.py  test_heterogeneous_schemas.py  test_ifdata.py  test_provider_contracts.py  test_query_engine.py  test_query_engine_union.py  test_search_date_filter.py  test_temporal_resolution.py
tests/qa/: conftest.py  test_concurrency.py  test_edge_cases.py  test_first_use.py  test_invalid_inputs.py
tests/unit/: test_cache.py  test_cnpj.py  test_constants.py  test_cosif_collector.py  test_cosif_collector_eras.py  test_date.py  test_enrichment.py  test_eras.py  test_exceptions.py  test_fuzzy.py  test_ifdata_collector.py  test_period.py  test_resilience.py  test_sql.py  test_temporal.py  test_text.py  test_validation.py  test_warnings_structured.py
