[project]
name = "ifdata-bcb"
version = "0.0.0"
description = "Analise de dados financeiros do Banco Central do Brasil (BCB)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "requests>=2.28.0",
    "platformdirs>=3.0.0",
    "thefuzz[speedup]>=0.22.0",
    "duckdb>=1.4.4",
    "loguru>=0.7.3",
    "rich>=14.3.1",
    "tenacity>=9.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ifdata_bcb"]

[dependency-groups]
dev = [
    "ipykernel==6.29.5",
    "ipywidgets>=8.1.8",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "temp"]
addopts = "-p no:cacheprovider"
