[project]
name = "ifdata-bcb"
version = "0.2.0"
description = "Analise de dados financeiros do Banco Central do Brasil (BCB)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "requests>=2.28.0",
    "platformdirs>=3.0.0",
    "thefuzz[speedup]>=0.22.0",
    "duckdb>=1.4.4",
    "loguru>=0.7.3",
    "rich>=14.3.1",
    "tenacity>=9.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "ipywidgets>=8.1.8",
]

[project.urls]
Homepage = "https://github.com/enzoomoreira/ifdata-bcb"
Repository = "https://github.com/enzoomoreira/ifdata-bcb"
Documentation = "https://github.com/enzoomoreira/ifdata-bcb/tree/master/docs"
"Bug Tracker" = "https://github.com/enzoomoreira/ifdata-bcb/issues"
Changelog = "https://github.com/enzoomoreira/ifdata-bcb/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ifdata_bcb"]

[dependency-groups]
dev = [
    "ipykernel==6.29.5",
    "openpyxl>=3.1.5",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "temp"]
addopts = "-p no:cacheprovider"
